--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Кликер Браво Старс</h1>
     <p id="score">Ваш текущий счет: <span id="currentScore">0</span></p>
-    <button id="clickButton"><img src="/static/shelly.png" width="300" height="500"></button>
+    <button id="clickButton"><img src="/static/images/shelly.png" width="300" height="500"></button>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
