--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Кликер Браво Старс</h1>
+    <h1>Кликер Бравл Старс</h1>
     <p id="score">Ваш текущий счет: <span id="currentScore">0</span></p>
     <button id="clickButton"><img src="/static/images/shelly.png" width="300" height="500"></button>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
