--- a/templates/page2.html
+++ b/templates/page2.html
@@ -9,6 +9,8 @@
     <h1>Кликер Бравл Старс</h1>
     <p id="score">Ваш текущий счет: <span id="currentScore">0</span></p>
     <button id="clickButton"><img src="/static/images/shelly.png" width="300" height="500"></button>
+    <img id="icon" src="/static/images/гем.jpg" alt="Гем">
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     {% include '_nav.html' %}
 </body>
