--- a/static/style.css
+++ b/static/style.css
@@ -25,3 +25,60 @@ body {
 #clickButton:hover {
     background-color: #0056b3;
 }
+#menu {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background: #f3f3f3;
+    padding: 10px 0;
+    border-radius: 20px 20px 0 0;
+}
+
+#menu div {
+    text-align: center;
+    flex: 1;
+}
+
+#menu img {
+    width: 40px;
+    height: 40px;
+    display: block;
+    margin: 0 auto;
+}
+
+#menu span {
+    font-size: 14px;
+    color: black;
+}
+.social-buttons {
+    position: fixed;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.social-buttons a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    text-decoration: none;
+}
+
+.social-buttons a img {
+    width: 30px;
+    height: 30px;
+}
+
+.social-buttons a:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+}
