--- a/static/style.css
+++ b/static/style.css
@@ -3,35 +3,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 65vh;
     flex-direction: column;
     background-color: #87CEEB;
 }
-#icon {
-    position: fixed;
-    top: 47px;
-    left: 50px;
-    width: 50px;
-    height: 50px;
-}
-#clickButton {
-    padding: 10px 20px;
-    background-color: #87CEEB;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-}
-#clickButton:hover {
-    background-color: #0056b3;
-}
+
+
 #menu {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    background: #f3f3f3;
+    background: #3E5F8A;
     padding: 10px 0;
-    border-radius: 20px 20px 0 0;
+    position: fixed;
+    bottom: 0;
 }
 
 #menu div {
@@ -48,37 +33,115 @@ body {
 
 #menu span {
     font-size: 14px;
-    color: black;
+    color: white;
 }
-.social-buttons {
+img {
+    transition: transform 0.8s ease; /* Плавный эффект */
+}
+img:active {
+    transform: translateX(-1%) scale(0.9); /* Уменьшение при нажатии */
+}
+
+#clickButton {
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#score {
     position: fixed;
-    top: 50%;
+    top: 70px;
+}
+
+.icon-container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    width: 40px;
+    height: 40px;
+    z-index: 1000;
+}
+
+
+.coin img {
+    position: fixed;
+    top: 70px;
+    left: 125px;
+    z-index: 1000;
+    width: 40px;
+    height: 40px;
+}
+
+.settings img {
+    position: fixed;
+    top: 10px;
     right: 10px;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    z-index: 1000;
 }
 
-.social-buttons a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-    text-decoration: none;
+.figure img {
+    position: fixed;
+    top: 10px;
+    left: 100px;
+    z-index: 1000;
 }
 
-.social-buttons a img {
-    width: 30px;
-    height: 30px;
+.figure_2 img {
+    position: fixed;
+    top: 10px;
+    left: 200px;
+    z-index: 1000;
 }
 
-.social-buttons a:hover {
-    transform: scale(1.1);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+#score_1 {
+    position: fixed;
+    top: 20px;
+    left: 85px;
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;
+    font-family: 'Arial', sans-serif;
+    z-index: 1000;
 }
+#score_2 {
+    position: fixed;
+    top: 20px;
+    left: 190px;
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;
+    font-family: 'Arial', sans-serif;
+    z-index: 1000;
+}
+
+
+progress {
+    position: fixed;
+    bottom: 87px;
+    left: 20px;
+    width: 90%;
+    height: 15px;
+    border: none;
+    background-color: #f3f3f3;
+    border-radius: 10px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: width 0.3s ease-in-out;
+}
+
+/* Стиль для фона полосы прогресса */
+progress::-webkit-progress-bar {
+    background-color: #e0e0e0;
+    border-radius: 10px;
+}
+
+/* Стиль для самого прогресса (заполненной части) */
+progress::-webkit-progress-value {
+    background-color: #4caf50;
+    border-radius: 10px;
+    transition: width 0.5s ease-in-out;
+}
+
+
+
