--- a/templates/page2.html
+++ b/templates/page2.html
@@ -10,5 +10,6 @@
     <p id="score">Ваш текущий счет: <span id="currentScore">0</span></p>
     <button id="clickButton"><img src="/static/images/shelly.png" width="300" height="500"></button>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+    {% include '_nav.html' %}
 </body>
 </html>
