friends, menu, progress bar, cases

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -8,25 +8,25 @@
     </a>
     <a href="/page2" class="nav-button {% if active_page == 'page2' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/4202/4202833.png" alt="Играть" width="15" height="15">
+            <img src="https://cdn-icons-png.flaticon.com/512/4202/4202833.png" alt="Друзья" width="15" height="15">
             <figcaption>Друзья</figcaption>
         </figure>
     </a>
     <a href="/page3" class="nav-button {% if active_page == 'page3' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png" alt="Играть" width="15" height="15">
+            <img src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png" alt="Магазин" width="15" height="15">
             <figcaption>Магазин</figcaption>
         </figure>
     </a>
     <a href="/page4" class="nav-button {% if active_page == 'page4' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/4302/4302236.png" alt="Играть" width="15" height="15">
+            <img src="https://cdn-icons-png.flaticon.com/512/4302/4302236.png" alt="квесты" width="15" height="15">
             <figcaption>Квесты</figcaption>
         </figure>
     </a>
     <a href="/page5" class="nav-button {% if active_page == 'page5' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/565/565326.png" alt="Играть" width="15" height="15">
+            <img src="https://cdn-icons-png.flaticon.com/512/565/565326.png" alt=рюкзак" width="15" height="15">
             <figcaption>Рюкзак</figcaption>
         </figure>
     </a>
