--- a/templates/page3.html
+++ b/templates/page3.html
@@ -6,10 +6,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Кликер Бравл Старс</h1>
-    <p id="score">Ваш текущий счет: <span id="currentScore">0</span></p>
-    <button id="clickButton"><img src="/static/images/shelly.png" width="300" height="500"></button>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-    {% include '_nav.html' %}
+
+
+<div class="box_1">
+    <img src="/static/images/box_1.png" width="80">
+</div>
+
+<div class="box_2">
+    <img src="/static/images/box_2.png" width="80">
+</div>
+<div class="box_3">
+    <img src="/static/images/box_3.png" width="80">
+</div>
+<div class="box_4">
+    <img src="/static/images/box_4.png" width="80">
+</div>
+
+
+
+
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+{% include '_nav.html' %}
 </body>
 </html>
