--- a/templates/page3.html
+++ b/templates/page3.html
@@ -2,30 +2,20 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Кликер Бравл Старс</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Рулетка с замедлением</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
+<div class="wheel-container">
+        <div class="wheel" id="wheel"></div>
+        <div class="pointer"></div>
+    </div>
+    <button class="spin-btn" id="spin-btn">Крутить</button>
+    <div class="result" id="result">Ваш приз появится здесь</div>
 
-<div class="box_1">
-    <img src="/static/images/box_1.png" width="80">
-</div>
-
-<div class="box_2">
-    <img src="/static/images/box_2.png" width="80">
-</div>
-<div class="box_3">
-    <img src="/static/images/box_3.png" width="80">
-</div>
-<div class="box_4">
-    <img src="/static/images/box_4.png" width="80">
-</div>
-
-
-
-
-<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='script2.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
