--- a/templates/page3.html
+++ b/templates/page3.html
@@ -15,7 +15,7 @@
     <button class="spin-btn" id="spin-btn">Крутить</button>
     <div class="result" id="result">Ваш приз появится здесь</div>
 
-<script src="{{ url_for('static', filename='script2.js') }}"></script>
+<script src="{{ url_for('static', filename='script_wheel.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
