--- a/templates/page4.html
+++ b/templates/page4.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Кликер Бравл Старс</h1>
+    <h1>Кликер Бравл Старс</h1>
 
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
