--- a/templates/page2.html
+++ b/templates/page2.html
@@ -34,6 +34,10 @@
 <div class="header-text_2">
     Друг также получит подарок!
 </div>
+<button class="open-wheel-btn" id="open-wheel-btn">Открыть рулетку</button>
+
+
+
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
