--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,13 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
-    height: 65vh;
+    height: 90vh;
     flex-direction: column;
-    background-color: #87CEEB;
+    background-color: #87CEEB; /* Это запасной цвет, если фон не загрузится */
+    background-image: url("/static/images/brawl_stars_lobby.png"); /* Укажите путь к вашему изображению */
+    background-size: cover; /* Растянуть изображение на весь контейнер */
+    background-position: center; /* Центровка изображения */
+    background-repeat: no-repeat; /* Запрет на повторение изображения */
 }
 
 .navigation {
@@ -64,7 +68,6 @@ body {
 #clickButton {
     position: absolute;
     bottom: 110px;
-    left: 7%;
 }
 
 #clickButton {
@@ -79,7 +82,7 @@ body {
     position: fixed;
     top: 80px;
     left: 185px;
-    z-index: 1000;
+
     width: 40px;
     height: 40px;
     top: 70px;
@@ -96,14 +99,14 @@ body {
     left: 10px;
     width: 400px;
     height: 40px;
-    z-index: 1000;
+
 }
 
 .coin img {
     position: fixed;
     top: 80px;
     left: 125px;
-    z-index: 1000;
+
     width: 40px;
     height: 40px;
 }
@@ -112,14 +115,14 @@ body {
     position: fixed;
     top: 10px;
     left: 100px;
-    z-index: 1000;
+
 }
 
 .figure_2 img {
     position: fixed;
     top: 10px;
     left: 200px;
-    z-index: 1000;
+
 }
 
 #score_1 {
@@ -127,20 +130,20 @@ body {
     top: 30px;
     left: 100px;
     font-size: 20px;
-    color: #333;
+    color: white;
     font-weight: bold;
     font-family: 'Arial', sans-serif;
-    z-index: 1000;
+
 }
 #score_2 {
     position: fixed;
     top: 30px;
     left: 200px;
     font-size: 20px;
-    color: #333;
+    color: white;
     font-weight: bold;
     font-family: 'Arial', sans-serif;
-    z-index: 1000;
+
 }
 
 #nick {
@@ -148,10 +151,10 @@ body {
     top: 60px;
     left: 10px;
     font-size: 20px;
-    color: #333;
+    color: white;
     font-weight: bold;
     font-family: 'Arial', sans-serif;
-    z-index: 1000;
+
 }
 
 .dropdown {
@@ -290,8 +293,6 @@ progress::-webkit-progress-value {
 
 /* Страница Магазин */
 
-
-
 .box_1 {
     position: fixed;
     top: 100px;
@@ -317,17 +318,35 @@ progress::-webkit-progress-value {
     z-index: 1000;
 }
 
+.open-wheel-img {
+    position: fixed;
+    top: 50%;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    transform: translateY(-50%);
+    z-index: 1000;
+}
 .wheel-container {
-            position: relative;
+            position: absolute;
             width: 300px;
             height: 300px;
+            display: none; /* Рулетка скрыта по умолчанию */
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            z-index: 9999; /* Устанавливаем высокий z-index, чтобы окно было выше других элементов */
         }
 
         .wheel {
-            width: 100%;
-            height: 100%;
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
-            border: 5px solid #444;
             background: conic-gradient(
                 #FF6347 0deg 60deg,
                 #FFD700 60deg 120deg,
@@ -338,17 +357,6 @@ progress::-webkit-progress-value {
             );
             transform: rotate(0deg);
             transition: transform 5s cubic-bezier(0.17, 0.67, 0.83, 0.67);
-        }
-
-        .pointer {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 20px;
-            height: 60px;
-            background: #444;
-            transform: translate(-50%, -100%);
-            clip-path: polygon(50% 0, 100% 100%, 0% 100%);
         }
 
         .spin-btn {
@@ -365,6 +373,33 @@ progress::-webkit-progress-value {
 
         .spin-btn:hover {
             background-color: #45a049;
+        }
+
+        .open-wheel-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 25px;
+            height: 25px;
+            background-color: #ff4d4d;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            border: none;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .close-btn:hover {
+            background-color: #e60000;
         }
 
         .result {
