--- a/templates/page1.html
+++ b/templates/page1.html
@@ -64,6 +64,7 @@
 
 
 <script src="{{ url_for('static', filename='script_wheel.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 
 {% include '_nav.html' %}
 
