--- a/templates/page5.html
+++ b/templates/page5.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Кликер Бравл Старс</h1>
+    <button id="button1">Топ игроков по монетам</button>
+    <button id="button2">Топ клубов</button>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     {% include '_nav.html' %}
