--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -27,7 +27,7 @@
     <a href="/page5" class="nav-button {% if active_page == 'page5' %}active{% endif %}">
         <figure>
             <img src="https://cdn-icons-png.flaticon.com/512/565/565326.png" alt=рюкзак" width="15" height="15">
-            <figcaption>Рюкзак</figcaption>
+            <figcaption>Топ</figcaption>
         </figure>
     </a>
 </div>
