--- a/templates/page3.html
+++ b/templates/page3.html
@@ -2,13 +2,20 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рулетка с замедлением</title>
+    <title>Кликер Бравл Старс</title>
+
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
-<script src="{{ url_for('static', filename='script_wheel.js') }}"></script>
+<nav>
+        <a href="page6.html">О нас</a>
+    </nav>
+    <button onclick="window.location.href='page6.html'">Подробнее</button>
+
+    <script src="index.js"></script>
+
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
 </body>
 </html>
