--- a/templates/page5.html
+++ b/templates/page5.html
@@ -10,6 +10,13 @@
     <button id="button1">Топ игроков по монетам</button>
     <button id="button2">Топ клубов</button>
 
+<div class="rectangle"></div>
+<div class="rectangle"></div>
+<div class="rectangle"></div>
+<div class="rectangle"></div>
+
+
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     {% include '_nav.html' %}
 </body>
