--- a/templates/page4.html
+++ b/templates/page4.html
@@ -10,17 +10,17 @@
 <div class="container">
         <ul class="task-list">
             <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png">
+                <img class="task-icon" src="/static/images/coin.png" width="80">
                 <span class="task-name">Подпишись на ТГ</span>
                 <span class="task-value">200 000</span>
             </li>
             <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png">
+                <img class="task-icon" src="/static/images/coin.png" width="80">
                 <span class="task-name">Пригласи 5 друзей</span>
                 <span class="task-value">10 000</span>
             </li>
             <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png">
+                <img class="task-icon" src="/static/images/coin.png" width="80">
                 <span class="task-name">Выиграй 1 раз в мини игре</span>
                 <span class="task-value">10 000</span>
             </li>
