--- a/templates/page6.html
+++ b/templates/page6.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Топ игроков</h1>
+<button onclick="window.location.href='/page3'">ящики</button>
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+{% include '_nav.html' %}
 </body>
 </html>
