--- a/templates/page3.html
+++ b/templates/page3.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <button onclick="window.location.href='/page6'">улучшения</button>
+<button onclick="window.location.href='/page3'">ящики</button>
 
 <button onclick="changeBackgroundImage()">Изменить фон на theme_2.png</button>
 <div class="box_1">
@@ -24,6 +25,9 @@
 <div class="box_4">
     <img src="/static/images/box_4.png" width="80">
 </div>
+
+<p class="text_2">Здесь ты можешь купить ящики</p>
+
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
 </body>
