--- a/templates/page6.html
+++ b/templates/page6.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <button onclick="window.location.href='/page3'">ящики</button>
+<button onclick="window.location.href='/page6'">улучшения</button>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
