--- a/templates/page4.html
+++ b/templates/page4.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-
+<p class="text_2">Выполняй квесты, получай награды</p>
 <div class="container">
         <ul class="task-list">
             <li class="task-item">
@@ -21,7 +21,7 @@
             </li>
             <li class="task-item">
                 <img class="task-icon" src="/static/images/coin.png" width="80">
-                <span class="task-name">Выиграй 1 раз в мини игре</span>
+                <span class="task-name">Выиграй 1 раз в игре</span>
                 <span class="task-value">10 000</span>
             </li>
         </ul>
