--- a/templates/page7.html
+++ b/templates/page7.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Кликер Бравл Старс</h1>
+    <h1>Кликер Бравл Старс_2</h1>
 <button onclick="window.location.href='/page5'">топ игроков по монетам</button>
 <button onclick="window.location.href='/page7'">топ клубов</button>
 
@@ -14,6 +14,7 @@
 <div class="rectangle"></div>
 <div class="rectangle"></div>
 <div class="rectangle"></div>
+
 
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
