page2_style and more

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рулетка с замедлением</title>
+    <title>Играть</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -25,7 +25,7 @@
 
 <img id="clickButton" src="/static/images/shelly_3.png" style="width: 330px;">
 
-<progress id="progress-bar" value="0" max="100"></progress>
+<progress id="progressBar" value="100" max="100"></progress>
 
 <div class="icon-container">
     <img src="/static/images/icon.png" alt="Иконка" width="80">
