--- a/templates/page2.html
+++ b/templates/page2.html
@@ -2,40 +2,24 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Кликер Бравл Старс</title>
+    <title>Друзья</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
-<div class="icon-container_2">
-    <img src="/static/images/icon.png" width="80">
+<div class="friends_6">
+    <img src="/static/images/friends_6.png" width="320">
+</div>
+<div class="friends_3">
+    <img src="/static/images/friends_3.png" width="320">
 </div>
 
-<div class="friends">
-    <img src="/static/images/friends.png" width="150">
+<div class="friends_4">
+    <img src="/static/images/friends_4.png" width="320">
 </div>
-
-<div class="friends_2">
-    <img src="/static/images/friends_2.png" width="170">
+<div class="friends_5">
+    <img src="/static/images/friends_5.png" width="320">
 </div>
-
-<div class="gift">
-    <img src="/static/images/gift.png" width="50">
-</div>
-
-<div class="list_friends">
-    <img src="/static/images/list_friends.png" width="200">
-</div>
-
-<div class="header-text">
-    Приглашай друзей и зарабатывай монеты!
-</div>
-
-<div class="header-text_2">
-    Друг также получит подарок!
-</div>
-
-
 
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
