--- a/templates/page4.html
+++ b/templates/page4.html
@@ -2,29 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Кликер Бравл Старс</title>
+    <title>Квесты</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 <p class="text_2">Выполняй квесты, получай награды</p>
-<div class="container">
-        <ul class="task-list">
-            <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png" width="80">
-                <span class="task-name">Подпишись на ТГ</span>
-                <span class="task-value">200 000</span>
-            </li>
-            <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png" width="80">
-                <span class="task-name">Пригласи 5 друзей</span>
-                <span class="task-value">10 000</span>
-            </li>
-            <li class="task-item">
-                <img class="task-icon" src="/static/images/coin.png" width="80">
-                <span class="task-name">Выиграй 1 раз в игре</span>
-                <span class="task-value">10 000</span>
-            </li>
-        </ul>
+
+
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
