--- a/templates/page6.html
+++ b/templates/page6.html
@@ -7,7 +7,21 @@
 </head>
 <body>
 <button onclick="window.location.href='/page3'">ящики</button>
-<button onclick="window.location.href='/page6'">улучшения</button>
+<button onclick="window.location.href='/page6'">скины</button>
+<button onclick="window.location.href='/page7'">фоны</button>
+
+
+<p class="page3_text_2">Здесь ты можешь купить себе <br>
+    новый скин который даст </br>
+    тебе дополнительный бонус!<br></p>
+
+<div class="colt_gide">
+    <img src="/static/images/colt_5.png" width="200">
+</div>
+<div class="dialog">
+    <img src="/static/images/dialog.png" width="120">
+</div>
+
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
