--- a/templates/page8.html
+++ b/templates/page8.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Топ</title>
+    <title>Кликер Бравл Старс</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Кликер Бравл Старс</h1>
+    <h1>Кликер Бравл Старс_2</h1>
 <button onclick="window.location.href='/page5'">топ игроков по монетам</button>
 <button onclick="window.location.href='/page8'">топ клубов</button>
 
@@ -15,7 +15,7 @@
 <div class="rectangle"></div>
 <div class="rectangle"></div>
 
-<p class="text_3">1 место - ЖмыхБобр228</p>
+
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     {% include '_nav.html' %}
