--- a/static/style.css
+++ b/static/style.css
@@ -235,74 +235,38 @@ progress::-webkit-progress-value {
 
 
 /* Страница Друзья */
-.icon-container_2 {
-    position: fixed;
-    top: 200px;
-    left: 30px;
-    z-index: 1000;
+
+.friends_6 {
+    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+    text-align: center; /* Центрирование изображения */
 }
-.friends {
-    position: fixed;
-    top: 300px;
-    left: 30px;
-    z-index: 1000;
+.friends_3 {
+    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+    text-align: center; /* Центрирование изображения */
 }
 
-.friends_2 {
-    position: fixed;
-    top: 190px;
-    left: 190px;
-    z-index: 1000;
+.friends_4 {
+padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+text-align: center; /* Центрирование изображения */
 }
 
-.gift {
-    position: fixed;
-    top: 220px;
-    left: 120px;
-    z-index: 1000;
+.friends_5 {
+padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+text-align: center; /* Центрирование изображения */
 }
 
-.list_friends {
-    position: fixed;
-    top: 220px;
-    left: 180px;
-    z-index: 1000;
-}
-
-.header-text {
-    font-family: 'Arial', sans-serif; /* Шрифт */
-    font-size: 32px; /* Размер текста */
-    color: #ffffff; /* Цвет текста */
-    text-align: center; /* Выравнивание по центру */
-    background: linear-gradient(to right, #ff7e5f, #feb47b); /* Градиентный фон */
-    padding: 20px; /* Внутренний отступ */
-    border-radius: 10px; /* Скругление углов */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Тень */
-    margin-top: 20px; /* Отступ сверху */
-}
-.header-text_2 {
-    font-family: 'Arial', sans-serif; /* Шрифт */
-    font-size: 16px; /* Размер текста */
-    color: #ffffff; /* Цвет текста */
-    text-align: center; /* Выравнивание по центру */
-    background: linear-gradient(to right, #ff7e5f, #feb47b); /* Градиентный фон */
-    padding: 20px; /* Внутренний отступ */
-    border-radius: 10px; /* Скругление углов */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Тень */
-    margin-top: 250px; /* Отступ сверху */
-}
 
 /* Страница Магазин */
 
 .box_1 {
     position: fixed;
-    top: 100px;
+    top: 200px;
     left: 30px;
     z-index: 1000;
 }
 .box_2 {
     position: fixed;
-    top: 200px;
+    top: 300px;
     left: 30px;
     z-index: 1000;
 }
@@ -314,7 +278,7 @@ progress::-webkit-progress-value {
 }
 .box_4 {
     position: fixed;
-    top: 100px;
+    top: 300px;
     left: 130px;
     z-index: 1000;
 }
@@ -408,57 +372,55 @@ progress::-webkit-progress-value {
     font-size: 18px;
     color: #333;
 }
-.text_2 {
-            font-family: Arial
-            font-size: 48px;
-            color: white;
-        }
+.page3_text_2 {
+    position: fixed;
+    top: 190px;
+    right: 40px;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+    font-family: 'Arial', sans-serif;
+    z-index: 1000;
 
+}
+
+.dialog {
+    position: fixed;
+    top: 60px;
+    right: 10px;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    font-family: 'Arial', sans-serif;
+
+}
 /* Страница Квесты */
-.task-list {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .task-item {
-            background-color: #2c3e50;
-            color: white;
-            font-size: 16px;
-            line-height: 50px;
-            width: 300px;
-            height: 50px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .task-item:hover {
-            transform: scale(1.05);
-        }
-
-        .task-icon {
-            float: left;
-            margin-right: 10px;
-        }
-
-        .task-name {
-            font-weight: bold;
-        }
-
-        .task-value {
-            float: right;
-        }
 
 /* Страница топ */
+
 .rectangle {
             width: 300px; /* Ширина прямоугольника */
             height: 100px; /* Высота прямоугольника */
             background-color: #808080; /* Серый цвет */
             border-radius: 20px; /* Скругление углов */
-            margin: 20px; /* Промежуток вокруг каждого прямоугольника
+            margin: 20px; /* Промежуток вокруг каждого прямоугольника*/
         }
+
+
+.text_3 {
+            font-family: Arial
+            font-size: 48px;
+            color: white;
+            position: fixed;
+            top: 160px;
+            left: 100px;
+
+/* Фоны*/
+
+.small-button" {
+    width: 50px; /* Ширина кнопки */
+    height: 30px; /* Высота кнопки */
+    position: absolute; /* Позволяет размещать элемент в любом месте экрана */
+    top: 300; /* Расположение от верхнего края */
+    left: 0; /* Расположение от левого края */
+}
