--- a/templates/page3.html
+++ b/templates/page3.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кликер Бравл Старс</title>
+    <title>Магазин</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<button onclick="window.location.href='/page6'">улучшения</button>
 <button onclick="window.location.href='/page3'">ящики</button>
+<button onclick="window.location.href='/page6'">скины</button>
+<button onclick="window.location.href='/page7'">фоны</button>
 
-<button onclick="changeBackgroundImage()">Изменить фон на theme_2.png</button>
+<div class="colt_gide">
+    <img src="/static/images/colt_5.png" width="200">
+</div>
+<div class="dialog">
+    <img src="/static/images/dialog.png" width="120">
+</div>
+
 <div class="box_1">
     <img src="/static/images/box_1.png" width="80">
 </div>
@@ -26,7 +33,9 @@
     <img src="/static/images/box_4.png" width="80">
 </div>
 
-<p class="text_2">Здесь ты можешь купить ящики</p>
+<p class="page3_text_2">Открывай ящики и выбивай из них <br>
+    новых персонажей для перехода </br>
+    на следующий уровень!<br></p>
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% include '_nav.html' %}
