--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,31 +2,31 @@
 <div class="navigation" id="menu">
     <a href="/" class="nav-button {% if active_page == 'page1' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/828/828556.png" alt="Играть" width="15" height="15">
+            <img src="static/images/play.png" alt="Играть" width="15" height="15">
             <figcaption>Играть</figcaption>
         </figure>
     </a>
     <a href="/page2" class="nav-button {% if active_page == 'page2' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/4202/4202833.png" alt="Друзья" width="15" height="15">
+            <img src="/static/images/friends_7.png" alt="Друзья" width="15" height="15">
             <figcaption>Друзья</figcaption>
         </figure>
     </a>
     <a href="/page3" class="nav-button {% if active_page == 'page3' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png" alt="Магазин" width="15" height="15">
+            <img src="static/images/shop.png" alt="Магазин" width="15" height="15">
             <figcaption>Магазин</figcaption>
         </figure>
     </a>
     <a href="/page4" class="nav-button {% if active_page == 'page4' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/4302/4302236.png" alt="квесты" width="15" height="15">
+            <img src="static/images/quests.png" alt="квесты" width="15" height="15">
             <figcaption>Квесты</figcaption>
         </figure>
     </a>
     <a href="/page5" class="nav-button {% if active_page == 'page5' %}active{% endif %}">
         <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/565/565326.png" alt=рюкзак" width="15" height="15">
+            <img src="static/images/top.png" alt=рюкзак" width="15" height="15">
             <figcaption>Топ</figcaption>
         </figure>
     </a>
