--- a/templates/page1.html
+++ b/templates/page1.html
@@ -28,7 +28,7 @@
 <progress id="progressBar" value="100" max="100"></progress>
 
 <div class="icon-container">
-    <img src="/static/images/icon.png" alt="Иконка" width="80">
+    <img src="/static/images/icon.png" alt="Иконка" width="500">
 </div>
 
 <div class="coin">
@@ -42,11 +42,7 @@
 
 
 <div class="figure">
-    <img src="/static/images/figure.png" alt="овал" width="60">
-</div>
-
-<div class="figure_2">
-    <img src="/static/images/figure.png" alt="овал" width="60">
+    <img src="/static/images/money.png" alt="овал" width="450">
 </div>
 
 
