--- a/static/style.css
+++ b/static/style.css
@@ -51,8 +51,8 @@ body {
 }
 
 .nav-button img {
-    width: 30px; /* Размер иконки */
-    height: 30px;
+    width: 35px; /* Размер иконки */
+    height: 35px;
     transition: transform 0.3s ease; /* Анимация увеличения при наведении */
 }
 
@@ -149,8 +149,8 @@ body {
 
 #nick {
     position: fixed;
-    top: 60px;
-    left: 10px;
+    top: 85px;
+    left: 20px;
     font-size: 20px;
     color: white;
     font-weight: bold;
@@ -231,56 +231,6 @@ progress::-webkit-progress-value {
     background-color: #4caf50;
     border-radius: 10px;
     transition: width 0.5s ease-in-out;
-}
-
-
-/* Страница Друзья */
-
-.friends_6 {
-    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
-    text-align: center; /* Центрирование изображения */
-}
-.friends_3 {
-    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
-    text-align: center; /* Центрирование изображения */
-}
-
-.friends_4 {
-padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
-text-align: center; /* Центрирование изображения */
-}
-
-.friends_5 {
-padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
-text-align: center; /* Центрирование изображения */
-}
-
-
-/* Страница Магазин */
-
-.box_1 {
-    position: fixed;
-    top: 200px;
-    left: 30px;
-    z-index: 1000;
-}
-.box_2 {
-    position: fixed;
-    top: 300px;
-    left: 30px;
-    z-index: 1000;
-}
-.box_3 {
-    position: fixed;
-    top: 200px;
-    left: 130px;
-    z-index: 1000;
-}
-.box_4 {
-    position: fixed;
-    top: 300px;
-    left: 130px;
-    z-index: 1000;
 }
 
 .open-wheel-img {
@@ -372,6 +322,146 @@ text-align: center; /* Центрирование изображения */
     font-size: 18px;
     color: #333;
 }
+
+.open-wheel_2-img {
+    position: fixed;
+    top: 50%;
+    left: 20px;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    transform: translateY(-50%);
+    z-index: 1000;
+}
+.wheel-container {
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            display: none; /* Рулетка скрыта по умолчанию */
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            z-index: 9999; /* Устанавливаем высокий z-index, чтобы окно было выше других элементов */
+        }
+
+        .wheel {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            background: conic-gradient(
+                #FF6347 0deg 60deg,
+                #FFD700 60deg 120deg,
+                #ADFF2F 120deg 180deg,
+                #00CED1 180deg 240deg,
+                #FF69B4 240deg 300deg,
+                #7B68EE 300deg 360deg
+            );
+            transform: rotate(0deg);
+            transition: transform 5s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+        }
+
+.spin-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.spin-btn:hover {
+    background-color: #45a049;
+}
+
+.open-wheel-btn:hover {
+    background-color: #0056b3;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 25px;
+    height: 25px;
+    background-color: #ff4d4d;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.close-btn:hover {
+    background-color: #e60000;
+}
+
+.result {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #333;
+}
+
+/* Страница Друзья */
+
+.friends_6 {
+    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+    text-align: center; /* Центрирование изображения */
+}
+.friends_3 {
+    padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+    text-align: center; /* Центрирование изображения */
+}
+
+.friends_4 {
+padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+text-align: center; /* Центрирование изображения */
+}
+
+.friends_5 {
+padding-top: 20px; /* Сместить содержимое вниз на 20 пикселей */
+text-align: center; /* Центрирование изображения */
+}
+
+
+/* Страница Магазин */
+
+.box_1 {
+    position: fixed;
+    top: 200px;
+    left: 30px;
+    z-index: 1000;
+}
+.box_2 {
+    position: fixed;
+    top: 300px;
+    left: 30px;
+    z-index: 1000;
+}
+.box_3 {
+    position: fixed;
+    top: 200px;
+    left: 130px;
+    z-index: 1000;
+}
+.box_4 {
+    position: fixed;
+    top: 300px;
+    left: 130px;
+    z-index: 1000;
+}
+
 .page3_text_2 {
     position: fixed;
     top: 190px;
