--- a/templates/page3.html
+++ b/templates/page3.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<button onclick="window.location.href='/page3'">ящики</button>
-<button onclick="window.location.href='/page6'">скины</button>
-<button onclick="window.location.href='/page7'">фоны</button>
+
+<div class="container">
+    <a href="/page3" class="item">
+        <img src="/static/images/button_menu.png" alt="Image 1" class="image">
+    </a>
+    <a href="/page6" class="item">
+        <img src="/static/images/button_menu_2.png" alt="Image 2" class="image">
+    </a>
+    <a href="/page7" class="item">
+        <img src="/static/images/button_menu_3.png" alt="Image 3" class="image">
+    </a>
+</div>
 
 <div class="colt_gide">
     <img src="/static/images/colt_5.png" width="200">
@@ -20,18 +29,9 @@
 </div>
 
 <div class="box_1">
-    <img src="/static/images/box_1.png" width="80">
+    <img src="/static/images/box_1.png" width="380">
 </div>
 
-<div class="box_2">
-    <img src="/static/images/box_2.png" width="80">
-</div>
-<div class="box_3">
-    <img src="/static/images/box_3.png" width="80">
-</div>
-<div class="box_4">
-    <img src="/static/images/box_4.png" width="80">
-</div>
 
 <p class="page3_text_2">Открывай ящики и выбивай из них <br>
     новых персонажей для перехода </br>
