--- a/templates/page7.html
+++ b/templates/page7.html
@@ -6,9 +6,17 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<button onclick="window.location.href='/page3'">ящики</button>
-<button onclick="window.location.href='/page6'">скины</button>
-<button onclick="window.location.href='/page7'">фоны</button>
+<div class="container">
+    <a href="/page3" class="item">
+        <img src="/static/images/button_menu.png" alt="Image 1" class="image">
+    </a>
+    <a href="/page6" class="item">
+        <img src="/static/images/button_menu_2.png" alt="Image 2" class="image">
+    </a>
+    <a href="/page7" class="item">
+        <img src="/static/images/button_menu_3.png" alt="Image 3" class="image">
+    </a>
+</div>
 
 <button class="small-button" onclick="changeBackgroundImage()">Изменить фон на theme_2.png</button>
 
